--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,16 @@
 </properties>
   <dependencies>
 		<dependency>
+		    <groupId>org.testng</groupId>
+		    <artifactId>testng</artifactId>
+		    <version>6.9.10</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<version>4.3.0</version>
 			
-		</dependency>
-		<dependency>
-		    <groupId>org.testng</groupId>
-		    <artifactId>testng</artifactId>
-		    <version>7.1.0</version>
-		    <scope>test</scope>
 		</dependency>
 		<dependency>
 	      <groupId>io.rest-assured</groupId>
@@ -43,6 +43,16 @@
 		    <groupId>com.googlecode.json-simple</groupId>
 		    <artifactId>json-simple</artifactId>
 		    <version>1.1.1</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.json</groupId>
+    		<artifactId>json</artifactId>
+    		<version>20090211</version>
+		</dependency>	
+		<dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.8.5</version>
 		</dependency>
 		<dependency>
             <groupId>com.github.scribejava</groupId>
@@ -76,7 +86,7 @@
     	<artifactId>log4j</artifactId>
     	<version>1.2.17</version>
 	</dependency>
-  </dependencies>
+</dependencies>
   <build>
   <plugins>
   	<plugin>
